platform/argocd/argocd-server-service-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: argocd-server
  annotations:
    tailscale.com/expose: "true"
    tailscale.com/hostname: "argocd"
