platform/argocd/argocd-ingress-funnel.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress
  annotations:
    tailscale.com/funnel: "true"
spec:
  ingressClassName: tailscale
  tls:
  - hosts:
    - funnel
  deafaultBackend:
    service:
      name: funnel
      port:
        number: 80
